restructured CSS to make it more logical

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,6 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +55,17 @@ p {
     background-position: center;
 }
 
+/* moved .content to make code more logical */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/* moved p to make code more logical */
+p {
+    font-size: 16px;
+}
 .float-left {
     float: left;
     margin-right: 25px;
@@ -67,12 +74,6 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
 }
 
 .benefits {
